--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
   border: 1px solid black;
   will-change: translate;
   cursor: grab;
-  background-image: linear-gradient(45deg, #cccccc 25%, transparent 25%), linear-gradient(-45deg, #cccccc 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #cccccc 75%), linear-gradient(-45deg, transparent 75%, #cccccc 75%);
-  background-size: 20px 20px;
-  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;}
+	background: center url("/hex.svg");
+	background-size: 64px;
+}
 
 .stage:active {
   cursor: grabbing;
@@ -25,11 +25,24 @@
   position: absolute;
   will-change: translate, rotate;
   transition-property: translate, rotate;
-  transition-duration: 4s;
+  transition-duration: 2s;
   transition-timing-function: ease-in-out;
 
   div {
     position: absolute;
     translate: -50% -50%;
   }
+
+}
+
+.selected::after {
+  content: '';
+  position: absolute;
+  top: -30%;
+  left: -30%;
+  right: -30%;
+  bottom: -30%;
+  border: 2px solid red;
+  border-radius: 50%;
+  z-index: -1;
 }
